# 2022-2-Certifik8

./: .gitignore  404.html  CODE_OF_CONDUCT.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt  setup.cfg  sitemap.xml
.github/ISSUE_TEMPLATE/: template-das-issues.md
.github/workflows/: testeUnitario.yml
2022-2-Squad08/: certificado.html  main.py  template.html  teste.xlsx
2022-2-Squad08/converter/: html2pdf.py
2022-2-Squad08/generator/: certificado.py
2022-2-Squad08/src/: certificado.py
GitPages_Mkdocs/: index.html  mkdocs.yml
GitPages_Mkdocs/docs/: README.md  index.md
GitPages_Mkdocs/docs/overrides/: home.html
GitPages_Mkdocs/docs/pages/: backlog.md  index.md
GitPages_Mkdocs/site/: 404.html  index.html  sitemap.xml
GitPages_Mkdocs/site/_coverpage/: index.html
GitPages_Mkdocs/site/_sidebar/: index.html
GitPages_Mkdocs/site/overrides/: home.html  main.html
GitPages_Mkdocs/site/pages/: index.html
GitPages_Mkdocs/site/pages/DocumentoDeArquiteturaDeSoftware/: index.html
GitPages_Mkdocs/site/pages/Documento_de_Visao/: index.html
GitPages_Mkdocs/site/pages/Post_Mortem/: index.html
GitPages_Mkdocs/site/pages/Prototipação/: index.html
GitPages_Mkdocs/site/pages/TAP/: index.html
GitPages_Mkdocs/site/pages/atas_Sprint_Review_E_Retro/: index.html
GitPages_Mkdocs/site/pages/backlog/: index.html
GitPages_Mkdocs/site/pages/objetivo/: index.html
GitPages_Mkdocs/site/search/: search_index.json
GitPages_Mkdocs/site/stylesheets/: extra.css
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  _coverpage.md  _sidebar.md  index.html
docs/exemplo/: exemplo.xlsx  exemplo2.xlsx
docs/pages/: atas_Sprint_Review_E_Retro.md  backlog.md  objetivo.md
pages/: index.html
pages/Documento_de_Visao/: index.html
pages/Prototipação/: index.html
pages/atas_Sprint_Review_E_Retro/: index.html
search/: search_index.json
src/: main.py
src/Certifik8/: certificado.py  data_emissao.py  html2pdf.py  main.py  test_data_emissao.py
src/Certifik8.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
