[tool.poetry]
name = "certifik8"
version = "0.2.1"
description = "Certifik8 é um gerador de certificados automático criado em Python. O projeto busca facilitar a geração massiva de documentos a serem emitidos após algum evento."
authors = [
    "Victorio <victorio.lazaro15@gmail.com>",
    "Pedro Henrique <pedrodsm1819@gmail.com>",
    "Pedro Sampaio <pedro.sampaio.dias.rocha@gmail.com>", 
    "Leandro <leanddrosouzasilva@gmail.com>", 
    "Daniel <sousadanielsb@gmail.com>", 
    "Geovane <galefreitas@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src/Certifik8"}]
repository = "https://github.com/fga-eps-mds/Certifik8"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "1.5.2"
setuptools = "65.6.3"
Pillow = "9.3.0"
PyPDF2 = "2.11.1"
pdfkit = "1.0.0"
pendulum = "^2.1.2"
beautifulsoup4 = "^4.11.1"
openpyxl = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
certifik8 = 'src.Certifik8.main:run'