[metadata]
name = Certifik8
version = 0.0.1
description = Certifik8 é um gerador de certificados automático para Semana Universitária da UnB. O Certifik8 só funciona em sistemas operacionais Linux. Para conseguir executá-lo, o usuário precisa instalar o Python, as biblioteca pdfkit, BeautifulSoup e pandas e o wkhtmltopdf. Para rodar no computador, digite o comando pip show Certifik8 para obter o endereço da biblioteca e digite o comando python3 endereço_biblioteca/Certifik8/main.py.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src